<resources>
    <string name="app_name">YIJI2</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_favorite">Yêu Thích</string>
    <string name="menu_history">Lịch Sử</string>
    <string name="menu_user">Hồ sơ người dùng</string>
    <string name="menu_change_pass">Đổi mật khẩu</string>
    <string name="menu_logout">Đăng Xuất</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>