<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history_black"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_favorite_black"
            android:title="@string/menu_favorite" />
    </group>

    <item android:title="Người dùng">
    <menu >
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_user"
                android:icon="@drawable/ic_menu_person_black"
                android:title="@string/menu_user" />
            <item
                android:id="@+id/nav_change_pass"
                android:icon="@drawable/ic_menu_settings_black"
                android:title="@string/menu_change_pass" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_power_settings_black"
                android:title="@string/menu_logout" />
            </group>
        </menu>
    </item>
</menu>